--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -85,6 +85,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
+        <Button
+            android:id="@+id/addFileBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/add_file" />
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bodyIn"
             android:layout_width="match_parent"
@@ -93,15 +100,15 @@
 
         <RadioGroup
             android:id="@+id/radioBtnGroup"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="148dp"
+            android:layout_height="wrap_content">
 
             <RadioButton
                 android:id="@+id/team1Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:contentDescription="0"
+                android:contentDescription="@string/_0"
                 android:text="Team 1" />
 
             <RadioButton
@@ -119,6 +126,7 @@
                 android:layout_weight="1"
                 android:contentDescription="2"
                 android:text="Team 3" />
+
         </RadioGroup>
 
     </com.google.android.material.textfield.TextInputLayout>
